ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: fusionauth
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    ingress.kubernetes.io/ssl-redirect: "true"
    traefik.ingress.kubernetes.io/router.tls: "true"
    cert-manager.io/issuer: letsencrypt-issuer
    acme.cert-manager.io/http01-ingress-class: traefik-cert-manager
    cert-manager.io/common-name: auth.aaron-miller.me
spec:
  rules:
    - host: auth.aaron-miller.me
      http:
        paths:
        - backend:
            serviceName: fusionauth
            servicePort: 9011
  tls:
    - hosts:
        - auth.aaron-miller.me
      secretName: auth.aaron-miller.me-cert
